# ACLRUSTMAY18

./: Cargo.toml  README.md
MCQs/Module01/: mcq.md
MCQs/Module02/: mcq.md
MCQs/Module03/: mcq.md
MCQs/Module04/: mcq.md
MCQs/Module05/: mcq.md
MCQs/Module06/: mcq.md
MCQs/Module07/: mcq.md
MCQs/Module08/: mcq.md
MCQs/Module09/: mcq.md
MCQs/Module10/: mcq.md
MCQs/Module11/: mcq.md
MCQs/Module12/: mcq.md
Practices/Module01_Mindset_Toolchain/: DEEPDIVE.md  README.md
Practices/Module02_Ownership_Borrowing/: DEEPDIVE.md  README.md
Practices/Module03_Structs_Enums_Patterns/: DEEPDIVE.md  README.md
Practices/Module04_Collections_Strings_Iterators/: DEEPDIVE.md  README.md
Practices/Module05_Error_Handling/: DEEPDIVE.md  README.md
Practices/Module06_Traits_Generics_Lifetimes/: DEEPDIVE.md  README.md
Practices/Module07_Concurrency/: DEEPDIVE.md  README.md
Practices/Module08_Async_Tokio/: DEEPDIVE.md  README.md
Practices/Module09_Enterprise_Architecture/: DEEPDIVE.md  README.md
Practices/Module10_Migration/: DEEPDIVE.md  README.md
Practices/Module11_Tooling_Testing_Benchmarking/: DEEPDIVE.md  README.md
Practices/Module12_Capstone/: DEEPDIVE.md  README.md
Programs/May19/: a.out  declare  declare.rs  floar_int.c
Programs/May20/: ownership1  ownership1.rs  ownership1_fun  ownership1_fun.rs
Programs/May21/: a.out  double_free.c  mut_ref  mut_ref.rs  ownership_func  ownership_func.rs  ownership_func_ref  ownership_func_ref.rs  str_lit  str_lit.rs  vec  vec.rs  vec2  vec2.rs
Programs/May25/: box  box.rs  global  global.rs  ownership_vec  (+5 more)
(+3 files in other folders)
